Wed Apr 18 12:38:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2084_Regression/run_test.pl:
        * tests/COIOP/run_test.pl:
        * tests/Collocation_Exception_Test/run_test.pl:
        * tests/Collocation_Oneway_Tests/run_test.pl:
        * tests/Collocation_Tests/run_test.pl:
        * tests/DII_Collocation_Tests/oneway/run_test.pl:
        * tests/DII_Collocation_Tests/twoway/run_test.pl:
        * tests/Portable_Interceptors/Collocated/Service_Context_Manipulation/run_test.pl:
          Improvements for vxworks cross platform testing

Wed Apr 18 12:10:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/OctetSeq/run_test.pl:
          Increased timeout for vxworks

        * tests/POA/Non_Servant_Upcalls/Non_Servant_Upcalls.cpp:
          Layout changes and removed msvc specific warning disabling

        * tests/POA/Object_Reactivation/Object_Reactivation.cpp:
        * tests/POA/Persistent_ID/server.cpp:
        * tests/POA/POA_Destruction/POA_Destruction.cpp:
          Layout changes, no need to pass in empty orb name

        * tests/Policies/Manipulation.cpp:
          Layout changes

Wed Apr 18 11:39:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2791_Regression/run_test.pl:
          Updated to run under VxWorks

        * tests/Bug_2289_Regression/run_test.pl:
          Don't use LocalFile for the executables

Wed Apr 18 10:23:00 UTC 2007  Ian Roberts  <ir@prismtech.com>

        * tao/Valuetype/Valuetype_Adapter_Impl:
          Fix for Bug 2791, resolving a memory leak when
          unregistering a value factory.

        * tests/Bug_2791_Regression/*:
          New regression test to cover Bug 2791.

Wed Apr 18 10:20:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/FoxResource.mpc:
        * tao/FoxResource/*:
          New Fox Toolkit support library. Thanks to
          Dmitriy Nikitinskiy <nick at bel dot ru> for providing these